new version of template

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <head>
 
@@ -9,19 +9,23 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
 
-	
 	<script src="js/utils/undefined.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.12"></script>
+	<script src="js/vue.js"></script>
 	<script src="js/technical/break_eternity.js"></script>
 	<script src="js/someUsefulFunctions_QwQe308.js"></script>
 	<script src="js/technical/layerSupport.js"></script>
 	<script src="js/tree.js"></script>
-	<script src="js/vue.js"></script>
 	<script src="js/layers.js"></script>
+	<script src="js/layers/H.js"></script>
+	<script src="js/layers/He.js"></script>
+	<script src="js/layers/Li.js"></script>
+	<script src="js/layers/C.js"></script>
 	<script src="js/mod.js"></script>
 	<script src="js/technical/temp.js"></script>
 	<script src="js/technical/displays.js"></script>
 	
+	<script src="js/pointer.js"></script>
+
 	<script src="js/game.js"></script>
 	<script src="js/utils.js"></script>
 	<script src="js/utils/easyAccess.js"></script>
