--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 	<script src="js/layers.js"></script>
 	<script src="js/layers/H.js"></script>
 	<script src="js/layers/He.js"></script>
-	<script src="js/layers/Li.js"></script>
+	<script src="js/layers/Li/Li.js"></script>
 	<script src="js/layers/C.js"></script>
 	<script src="js/mod.js"></script>
 	<script src="js/technical/temp.js"></script>
 	<script src="js/technical/displays.js"></script>
 	
 	<script src="js/pointer.js"></script>
+	<script src="js/color.js"></script>
 
 	<script src="js/game.js"></script>
 	<script src="js/utils.js"></script>
