--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
 	<script src="js/someUsefulFunctions_QwQe308.js"></script>
 	<script src="js/technical/layerSupport.js"></script>
 	<script src="js/tree.js"></script>
+	
 	<script src="js/layers.js"></script>
+	<script src="js/layers/blank.js"></script>
 	<script src="js/layers/H.js"></script>
 	<script src="js/layers/He.js"></script>
 	<script src="js/layers/Li/Li.js"></script>
+	<script src="js/layers/Li/ad.js"></script>
 	<script src="js/layers/C.js"></script>
+
 	<script src="js/mod.js"></script>
 	<script src="js/technical/temp.js"></script>
 	<script src="js/technical/displays.js"></script>
